...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Help-->
        <scene sceneID="UTs-Yc-pat">
            <objects>
                <viewController title="Help" id="5Z2-6F-bq7" customClass="SettingsHelpViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="p9E-ri-9Le">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zkg-zO-E3s">
                                <rect key="frame" x="-4" y="140" width="418" height="632"/>
...
            </objects>
            <point key="canvasLocation" x="920" y="-62"/>
        </scene>
        <!--Edit Profile-->
        <scene sceneID="Z19-KS-bSb">
            <objects>
                <viewController title="Edit Profile" id="JHu-S5-a6R" customClass="SettingsEditiorViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3U9-G2-gFY">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bSe-LI-x6S">
                                <rect key="frame" x="0.0" y="140" width="414" height="632"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACd-k6-Z8f">
                                <rect key="frame" x="101" y="668" width="231" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="saveButton:" destination="JHu-S5-a6R" eventType="touchUpInside" id="fNl-GZ-N2x"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="919" y="627"/>
        </scene>
        <!--Notification Settings-->
        <scene sceneID="fL3-a4-bcS">
            <objects>
                <viewController title="Notification Settings" id="540-mu-eEK" customClass="SettingsNotificationViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="O6V-FU-ntL">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Notifications" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFI-Bx-a0q">
                                <rect key="frame" x="20" y="157" width="184" height="36"/>
...
            <point key="canvasLocation" x="920" y="1353"/>
        </scene>
        <!--Settings-->
        <scene sceneID="yfg-Yy-hoT">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="U7g-Bv-fzg" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="setting" selectedImage="setting" id="P4f-QY-MNl"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="qDL-fL-lzv">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
