...
import CoreLocation

class SettingsViewController: EmergencyButtonViewController, UITableViewDelegate, UITableViewDataSource {

    @IBOutlet weak var settingTableView: UITableView!
    var titleNameArr = ["Edit Profile", "Notification", "Emergency Button", "Help"]
    var detailArr = ["Edit personal info, change password, or log out", "Toggle notfications for Events", "Edit the message being sent to emergency contact", "FAQ, Disclaimer"]
    var imageNames = ["Profile", "Notification", "Ambulance", "Help"]
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        settingTableView.tableFooterView = UIView(frame: .zero)
...
