...
                            <constraint firstAttribute="trailing" secondItem="2NV-Dw-Acc" secondAttribute="trailing" id="d3b-Y5-GyD"/>
                            <constraint firstItem="IGg-Ry-ryk" firstAttribute="top" secondItem="4m6-Ys-eUb" secondAttribute="top" id="lB6-R5-m9S"/>
                            <constraint firstItem="2NV-Dw-Acc" firstAttribute="top" secondItem="IGg-Ry-ryk" secondAttribute="bottom" id="viX-wz-7E8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="4m6-Ys-eUb"/>
                    </view>
                    <navigationItem key="navigationItem" title="Chat" id="D9p-wL-laI"/>
                    <connections>
                        <outlet property="chatListTableView" destination="IGg-Ry-ryk" id="XAB-ay-lxh"/>
                        <outlet property="emergencyButton" destination="2NV-Dw-Acc" id="lAI-bI-Jh5"/>
                        <segue destination="coq-Ir-RDf" kind="show" identifier="showGroupChat" id="MFW-Fe-Lbc"/>
                    </connections>
                </viewController>
...
            <point key="canvasLocation" x="328" y="-1011"/>
        </scene>
        <!--Chats-->
        <scene sceneID="Auc-6Y-BKF">
            <objects>
                <navigationController id="xOD-FP-9ty" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Chats" image="chat" selectedImage="chat" id="D6d-Rb-M5F"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="XuY-Sh-6WX">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
