...
                            <constraint firstAttribute="trailing" secondItem="MmZ-BC-OAg" secondAttribute="trailing" id="gke-dh-5Ey"/>
                            <constraint firstItem="luo-lr-o7B" firstAttribute="leading" secondItem="Vty-5k-4c4" secondAttribute="leading" id="ka3-ZA-BNr"/>
                            <constraint firstItem="luo-lr-o7B" firstAttribute="top" secondItem="MmZ-BC-OAg" secondAttribute="bottom" id="pkI-Gy-inG"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Vty-5k-4c4"/>
                    </view>
                    <navigationItem key="navigationItem" title="Groups" largeTitleDisplayMode="always" id="Gof-KB-n7Q"/>
                    <connections>
                        <outlet property="emergencyButton" destination="luo-lr-o7B" id="82Q-Us-miH"/>
                        <outlet property="groupTableView" destination="MmZ-BC-OAg" id="4Gt-kW-o5z"/>
                        <segue destination="wNr-fw-8la" kind="show" identifier="showGroupDetail" id="ODv-Kb-jVd"/>
                        <segue destination="gff-nJ-i4z" kind="show" identifier="createPrivateGroup" id="LD1-wN-EWm"/>
                    </connections>
...
            </objects>
            <point key="canvasLocation" x="828" y="173"/>
        </scene>
        <!--Create Private Group-->
        <scene sceneID="xSu-6R-ve5">
            <objects>
                <viewController title="Create Private Group" id="gff-nJ-i4z" customClass="CreatePrivateGroupViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="cdc-eI-4tK">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Group Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jvb-LV-fuT">
                                <rect key="frame" x="20" y="193" width="374" height="30"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vwb-RY-nKz">
                                <rect key="frame" x="167" y="598" width="80" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="2WT-gr-WTa"/>
                                    <constraint firstAttribute="width" constant="80" id="XUG-t9-c5X"/>
                                </constraints>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButtonAction:" destination="gff-nJ-i4z" eventType="touchUpInside" id="X0E-pP-SjV"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
            </objects>
            <point key="canvasLocation" x="3901" y="464"/>
        </scene>
        <!--Add Event-->
        <scene sceneID="ZQN-9z-XMw">
            <objects>
                <viewController title="Add Event" id="a7v-Zh-tzd" customClass="AddEventViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="mjx-KX-Ks9">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2j9-qO-uF6">
                                <rect key="frame" x="20" y="193" width="374" height="30"/>
...
            </objects>
            <point key="canvasLocation" x="4593" y="-1279"/>
        </scene>
        <!--Invite-->
        <scene sceneID="pvi-4W-4Ig">
            <objects>
                <viewController title="Invite" id="Jzk-fl-oSp" customClass="InviteFriendsViewController" customModule="SteadyFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Abr-e2-sqv">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1UT-o6-jby">
                                <rect key="frame" x="0.0" y="140" width="414" height="632"/>
...
            </objects>
            <point key="canvasLocation" x="4626" y="173"/>
        </scene>
        <!--Profile-->
        <scene sceneID="iPF-TR-slb">
            <objects>
                <viewControllerPlaceholder storyboardName="Profile" id="8cW-ov-Gi3" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="74e-2I-5lj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="5686" y="173"/>
        </scene>
    </scenes>
    <resources>
...
