...
    @IBOutlet weak var groupStatusInfo: UILabel!
    
    @IBOutlet weak var eventTableView: UITableView!
    
    var groupName: String!
    var sampleTitle = ["Members", "Events"]
    var sampleContent = [["More"], ["A Event on Jan 1, 2018", "B Event on Feb 1, 2018", "C Event on Mar 1, 2018"]]
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        eventTableView.delegate = self
        eventTableView.dataSource = self
...
