...
        label.text = sectionForGroup[section]
        label.frame = CGRect(x: 10, y: 0, width: 100, height: 22)
        headerView.addSubview(label)
        if p == 0 {
            let button = UIButton()
            button.frame = CGRect(x: view.bounds.maxX - 55, y: 0, width: 50, height: 22)
            button.setTitle("Add", for: .normal)
            button.setTitleColor(.black, for: .normal)
            button.addTarget(self, action: #selector(AddButtonPressed), for: .touchUpInside)
            button.layer.borderWidth = 1
            button.backgroundColor = UIColor(red: 247/255, green: 247/255, blue: 247/255, alpha: 1)
            button.showsTouchWhenHighlighted = true
            headerView.addSubview(button)
...
